[gd_scene load_steps=26 format=2]

[ext_resource path="res://Assets/Scenes/TitleScene.gd" type="Script" id=1]
[ext_resource path="res://Assets/Graphics/NightBackground.png" type="Texture" id=2]
[ext_resource path="res://Assets/Graphics/Campfire_spritesheet.png" type="Texture" id=3]
[ext_resource path="res://Assets/fire.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/Fonts/vtf-misterpixel.regular.otf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Graphics/Characters/Kneeling/Hubert_Sheet_knee.png" type="Texture" id=6]
[ext_resource path="res://Assets/Graphics/Characters/Kneeling/raea_knee.png" type="Texture" id=7]
[ext_resource path="res://Assets/Graphics/Characters/Kneeling/NoSoulBoiKneel.png" type="Texture" id=8]
[ext_resource path="res://Assets/Graphics/Characters/Kneeling/fmale_knee.png" type="Texture" id=9]
[ext_resource path="res://Assets/Graphics/Characters/Kneeling/Zachs_character_knee.png" type="Texture" id=10]
[ext_resource path="res://Assets/Graphics/Characters/Kneeling/christian_kneell.png" type="Texture" id=11]
[ext_resource path="res://Assets/Graphics/Characters/Kneeling/pete_knee.png" type="Texture" id=12]
[ext_resource path="res://Assets/Graphics/Characters/Kneeling/Not_Neko_Fullspritesheet_knee.png" type="Texture" id=13]
[ext_resource path="res://Assets/Title_shop.ogg" type="AudioStream" id=14]

[sub_resource type="Animation" id=11]

resource_name = "fire"
length = 0.9
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="DynamicFont" id=1]

size = 35
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 50
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 18
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 18
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=5]

size = 18
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=6]

size = 18
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=7]

size = 18
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=8]

size = 18
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=9]

size = 18
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=10]

size = 18
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="TitleScene" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 512, 300 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Campfire" type="Sprite" parent="." index="1"]

position = Vector2( 504.665, 385.267 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
vframes = 3
hframes = 3
_sections_unfolded = [ "Animation", "Transform" ]

[node name="CampfireAnimations" type="AnimationPlayer" parent="Campfire" index="0"]

root_node = NodePath("..")
autoplay = "fire"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/fire = SubResource( 11 )
blend_times = [  ]

[node name="CampfireCrackle" type="AudioStreamPlayer" parent="Campfire" index="1"]

stream = ExtResource( 4 )
volume_db = -10.0
pitch_scale = 1.1
autoplay = true
mix_target = 0
bus = "Master"

[node name="StartButton" type="Button" parent="." index="2"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -49.0
margin_top = -63.0
margin_right = 49.0
margin_bottom = -21.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="TitleLabel" type="Label" parent="." index="3"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -194.0
margin_top = 45.0
margin_right = 194.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Our Shared Agony"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="HubertButton" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 179.0
margin_top = 273.0
margin_right = 287.0
margin_bottom = 311.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Hubert"
icon = ExtResource( 6 )
flat = true
align = 1
_sections_unfolded = [ "Grow Direction", "Rect", "custom_fonts" ]

[node name="RaeaButton" type="Button" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 275.0
margin_top = 175.0
margin_right = 372.0
margin_bottom = 213.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Raea"
icon = ExtResource( 7 )
flat = true
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="LawrenceButton" type="Button" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 105.0
margin_top = 384.0
margin_right = 228.0
margin_bottom = 422.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Lawrence"
icon = ExtResource( 8 )
flat = true
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="EmilyButton" type="Button" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 177.0
margin_top = 490.0
margin_right = 283.0
margin_bottom = 528.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Emily"
icon = ExtResource( 9 )
flat = true
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="ZachButton" type="Button" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 626.0
margin_top = 487.0
margin_right = 732.0
margin_bottom = 525.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Zach"
icon = ExtResource( 10 )
flat = true
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="ChrisButton" type="Button" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 671.0
margin_top = 371.0
margin_right = 777.0
margin_bottom = 409.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 8 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Chris"
icon = ExtResource( 11 )
flat = true
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="PeteButton" type="Button" parent="." index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 644.0
margin_top = 278.0
margin_right = 768.0
margin_bottom = 316.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 9 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Pete"
icon = ExtResource( 12 )
flat = true
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="ShiraButton" type="Button" parent="." index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 530.0
margin_top = 171.0
margin_right = 636.0
margin_bottom = 209.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 10 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Shira"
icon = ExtResource( 13 )
flat = true
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="TitleSong" type="AudioStreamPlayer" parent="." index="12"]

stream = ExtResource( 14 )
volume_db = -5.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]

[connection signal="pressed" from="HubertButton" to="." method="_on_HubertButton_pressed"]

[connection signal="pressed" from="RaeaButton" to="." method="_on_RaeaButton_pressed"]

[connection signal="pressed" from="LawrenceButton" to="." method="_on_LawrenceButton_pressed"]

[connection signal="pressed" from="EmilyButton" to="." method="_on_EmilyButton_pressed"]

[connection signal="pressed" from="ZachButton" to="." method="_on_ZachButton_pressed"]

[connection signal="pressed" from="ChrisButton" to="." method="_on_ChrisButton_pressed"]

[connection signal="pressed" from="PeteButton" to="." method="_on_PeteButton_pressed"]

[connection signal="pressed" from="ShiraButton" to="." method="_on_ShiraButton_pressed"]


